--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,34 +3,34 @@ x-app: &default-app
     context: "."
     target: "app"
     args:
-      - "UID=${UID:-1000}"
-      - "GID=${GID:-1000}"
-      - "RAILS_ENV=${RAILS_ENV:-production}"
-      - "NODE_ENV=${NODE_ENV:-production}"
+      - "UID=$${UID:-1000}"
+      - "GID=$${GID:-1000}"
+      - "RAILS_ENV=$${RAILS_ENV:-production}"
+      - "NODE_ENV=$${NODE_ENV:-production}"
   depends_on:
     - "postgres"
     - "redis"
   env_file:
     - ".env"
-  restart: "${DOCKER_RESTART_POLICY:-unless-stopped}"
+  restart: "$${DOCKER_RESTART_POLICY:-unless-stopped}"
   stop_grace_period: "3s"
   tty: true
   volumes:
-    - "${DOCKER_WEB_VOLUME:-./public:/app/public}"
+    - "$${DOCKER_WEB_VOLUME:-./public:/app/public}"
 
 x-assets: &default-assets
   build:
     context: "."
     target: "assets"
     args:
-      - "UID=${UID:-1000}"
-      - "GID=${GID:-1000}"
-      - "RAILS_ENV=${RAILS_ENV:-production}"
-      - "NODE_ENV=${NODE_ENV:-production}"
+      - "UID=$${UID:-1000}"
+      - "GID=$${GID:-1000}"
+      - "RAILS_ENV=$${RAILS_ENV:-production}"
+      - "NODE_ENV=$${NODE_ENV:-production}"
   env_file:
     - ".env"
   profiles: ["assets"]
-  restart: "${DOCKER_RESTART_POLICY:-unless-stopped}"
+  restart: "$${DOCKER_RESTART_POLICY:-unless-stopped}"
   stop_grace_period: "3s"
   tty: true
   volumes:
@@ -41,15 +41,15 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "${DOCKER_POSTGRES_CPUS:-0}"
-          memory: "${DOCKER_POSTGRES_MEMORY:-0}"
+          cpus: "$${DOCKER_POSTGRES_CPUS:-0}"
+          memory: "$${DOCKER_POSTGRES_MEMORY:-0}"
     environment:
-      POSTGRES_USER: "${POSTGRES_USER}"
-      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
-      # POSTGRES_DB: "${POSTGRES_DB}"
+      POSTGRES_USER: "$${POSTGRES_USER}"
+      POSTGRES_PASSWORD: "$${POSTGRES_PASSWORD}"
+      # POSTGRES_DB: "$${POSTGRES_DB}"
     image: "postgres:15.1-bullseye"
     profiles: ["postgres"]
-    restart: "${DOCKER_RESTART_POLICY:-unless-stopped}"
+    restart: "$${DOCKER_RESTART_POLICY:-unless-stopped}"
     stop_grace_period: "3s"
     volumes:
       - "postgres:/var/lib/postgresql/data"
@@ -58,11 +58,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "${DOCKER_REDIS_CPUS:-0}"
-          memory: "${DOCKER_REDIS_MEMORY:-0}"
+          cpus: "$${DOCKER_REDIS_CPUS:-0}"
+          memory: "$${DOCKER_REDIS_MEMORY:-0}"
     image: "redis:7.0.7-bullseye"
     profiles: ["redis"]
-    restart: "${DOCKER_RESTART_POLICY:-unless-stopped}"
+    restart: "$${DOCKER_RESTART_POLICY:-unless-stopped}"
     stop_grace_period: "3s"
     volumes:
       - "redis:/data"
@@ -72,16 +72,16 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "${DOCKER_WEB_CPUS:-0}"
-          memory: "${DOCKER_WEB_MEMORY:-0}"
+          cpus: "$${DOCKER_WEB_CPUS:-0}"
+          memory: "$${DOCKER_WEB_MEMORY:-0}"
     healthcheck:
-      test: "${DOCKER_WEB_HEALTHCHECK_TEST:-curl localhost:8000/up}"
+      test: "$${DOCKER_WEB_HEALTHCHECK_TEST:-curl localhost:8000/up}"
       interval: "60s"
       timeout: "3s"
       start_period: "5s"
       retries: 3
     ports:
-      - "${DOCKER_WEB_PORT_FORWARD:-127.0.0.1:8000}:${PORT:-8000}"
+      - "$${DOCKER_WEB_PORT_FORWARD:-127.0.0.1:8000}:$${PORT:-8000}"
     profiles: ["web"]
 
   worker:
@@ -91,8 +91,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "${DOCKER_WORKER_CPUS:-0}"
-          memory: "${DOCKER_WORKER_MEMORY:-0}"
+          cpus: "$${DOCKER_WORKER_CPUS:-0}"
+          memory: "$${DOCKER_WORKER_MEMORY:-0}"
     profiles: ["worker"]
 
   cable:
@@ -102,10 +102,10 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "${DOCKER_CABLE_CPUS:-0}"
-          memory: "${DOCKER_CABLE_MEMORY:-0}"
+          cpus: "$${DOCKER_CABLE_CPUS:-0}"
+          memory: "$${DOCKER_CABLE_MEMORY:-0}"
     ports:
-      - "${DOCKER_CABLE_PORT_FORWARD:-127.0.0.1:28080}:28080"
+      - "$${DOCKER_CABLE_PORT_FORWARD:-127.0.0.1:28080}:28080"
     profiles: ["cable"]
 
   js:
