--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ x-app: &default-app
   stop_grace_period: "3s"
   tty: true
   volumes:
-    - "$${DOCKER_WEB_VOLUME:-./public:/app/public}"
+    - "${DOCKER_WEB_VOLUME:-./public:/app/public}"
 
 x-assets: &default-assets
   build:
